# whisper-server

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  database.py  main.py  templating.py
app/api/: __init__.py  meetings.py  scenarios.py  search.py  settings.py  vocabularies.py
app/auth/: __init__.py  password.py  session.py
app/models/: __init__.py  base.py  meeting.py  setting.py  user.py  vocabulary.py
app/services/: __init__.py  gdrive.py  notify.py  prompt.py  queue.py  reports.py  search.py  settings_store.py  storage.py
app/static/: style.css  upload.js
app/templates/: base.html  dashboard.html  search.html
app/templates/auth/: login.html
app/templates/meetings/: _status.html  detail.html  list.html  new.html
app/templates/scenarios/: list.html  template.html
app/templates/settings/: index.html
app/templates/vocabularies/: detail.html  list.html
docker/: Dockerfile.app  Dockerfile.backup  Dockerfile.worker  entrypoint-app.sh
docs/: organize-prompt.md  organize-with-claude-code.md
mcp_server/: __init__.py  server.py
migrations/: env.py
migrations/versions/: 001_initial.py  002_load_seeds.py  003_meeting_diarization.py  004_chunked_upload.py  005_report_templates.py  006_fts_search.py
scripts/: backup.sh  check_diarization.py  create_admin.py  setup-storage.sh
seeds/: vocabulary_seed.sql
tests/: test_smoke.py
worker/: __init__.py  worker.py
worker/jobs/: __init__.py  process_meeting.py
