[project]
name = "whisper-server"
version = "0.1.0"
description = "Private meeting transcription system with scenario-aware vocabulary and MCP integration"
authors = [{ name = "Ethan", email = "asecondfive@gmail.com" }]
requires-python = ">=3.11,<3.13"
readme = "README.md"

dependencies = [
    # Web framework
    "fastapi[all]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "starlette>=0.41.0",

    # 数据库
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",

    # 鉴权与会话
    "bcrypt>=4.2.0",
    "itsdangerous>=2.2.0",      # 服务端 session 签名

    # 模板与 UI
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "babel>=2.16.0",            # i18n

    # 配置
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # 任务队列
    "rq>=1.16.0",
    "redis>=5.1.0",

    # HTTP 客户端 (Google Drive 用)
    "httpx>=0.27.0",

    # 工具
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",        # 结构化日志
    "tenacity>=9.0.0",           # 重试

    # WhisperX 通过 worker 镜像安装，不在主 deps（避免 app 镜像也下 GB 级模型）
]

[project.optional-dependencies]
worker = [
    # WhisperX 与依赖
    "whisperx>=3.4.0",
    "torch>=2.5.0",              # CUDA 12.1 wheel 通过 Dockerfile 指定
    "torchaudio>=2.5.0",
    "ffmpeg-python>=0.2.0",
    "google-api-python-client>=2.149.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
]

dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "worker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "C4", "SIM", "ARG"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
